Initial transition to 1.21.